# haskell-jira-client

./: .hlint.yaml  README.md  cabal.project  flake.nix  jira-client.cabal  package.yaml
.github/workflows/: ci.yml  release.yml
app/: JiraEpicAttacher.hs
md2jira/: CHANGELOG.md  README.md  md2jira.cabal
md2jira/app/: Main.hs  Migrate.hs
md2jira/src/: MD2Jira.hs
md2jira/test/: Spec.hs
md2jira/test/golden/: attr.md  attr.md-ast.golden  attr.md-jira.golden  attr.md-round.golden  demo.md  demo.md-ast.golden  demo.md-jira.golden  demo.md-round.golden  local.md-ast.golden  local.md-jira.golden  local.md-round.golden  tasks.md  tasks.md-ast.golden  tasks.md-jira.golden  tasks.md-round.golden
src/: Jira.hs
test/: Spec.hs
test/data/: jiraissue.json
