cabal-version: 2.2
name: md2jira
version:        0.1

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    LambdaCase

common executable
  ghc-options: -threaded -rtsopts -with-rtsopts=-T

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: MD2Jira
  build-depends:
    , aeson
    , attoparsec
    , containers
    , exceptions
    , transformers
    , http-client
    , jira-client
    , mtl
    , text
    , witch

executable md2jira
  import:         common, executable
  hs-source-dirs: app/
  main-is:        Main.hs
  build-depends:
    , aeson > 2
    , directory
    , md2jira
    , text
    , bytestring
    , jira-client
    , http-client-tls
