cabal-version: 2.2
name: md2jira
version:        0.1
extra-source-files:
  test/golden/*.md
  test/golden/*.md-ast.golden
  test/golden/*.md-jira.golden
  test/golden/*.md-round.golden

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    LambdaCase

common executable
  ghc-options: -threaded -rtsopts -with-rtsopts=-T

library
  import:          common
  hs-source-dirs:  src
  exposed-modules: MD2Jira
  build-depends:
    , aeson
    , pandoc
    , pandoc-types
    , containers
    , exceptions
    , transformers
    , http-client
    , jira-client
    , mtl
    , text
    , unix-time
    , witch

executable md2jira
  import:         common, executable
  hs-source-dirs: app/
  main-is:        Main.hs
  build-depends:
    , aeson > 2
    , directory
    , md2jira
    , text
    , bytestring
    , jira-client
    , http-client-tls

test-suite md2jira-test
  import: common, executable
  type: exitcode-stdio-1.0
  build-depends:
    , text
    , directory
    , pretty-simple  <5
    , tasty          <1.5
    , tasty-golden   <2.4
    , tasty-hunit    <0.11
    , md2jira
  hs-source-dirs: test
  main-is: Spec.hs
